2009-09-28  Matthew Mundell <matthew.mundell@intevation.de>

	* nasl/openvas_logging.c (openvas_log_func): On failure to create the log
	file, ensure that the directory exists and try open the file again.

2009-09-28  Matthew Mundell <matthew.mundell@intevation.de>

	* base/CMakeLists.txt, omp/CMakeLists.txt, nasl/CMakeLists.txt: Set cmake
	minimum required version to 2.6.

2009-09-28  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Post-release version bump.

	* VERSION: Set to 3.0.0.beta3.SVN.

	* doc/Doxyfile, doc/Doxyfile_full: Updated PROJECT_NUMBER.

2009-09-28  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Last minute fix.

	* MANIFEST: Updated.

2009-09-28  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Preparing the openvas-libraries 3.0.0-beta2 release.

	* CHANGES: Updated.

	* VERSION: Set to 3.0.0.beta2.

	* doc/Doxyfile, doc/Doxyfile_full: Updated PROJECT_NUMBER.

2009-09-27  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* Makefile: Removed wrongly placed DESTDIRs.

2009-09-27  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* misc/network.c, misc/services.c: Resolved libopenvas.h by
	respective single includes.

	* misc/ids_send.h: Added missing include.

2009-09-26  Matthew Mundell <matthew.mundell@intevation.de>

	* omp/omp.c (omp_create_lsc_credential, omp_delete_lsc_credential): New
	functions.
	* omp/omp.h: Add headers.

2009-09-25  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* base/CMakeLists.txt, nasl/CMakeLists.txt, omp/CMakeLists.txt:
	Setting version for .so library properly.

2009-09-25  Matthew Mundell <matthew.mundell@intevation.de>

	* misc/openvas_server.c (openvas_server_new): Add arg "end_type" for
	setting server connection type.  Adjust
	gnutls_certificate_set_x509_key_file return check.  Expand warning
	message a little.

	* misc/openvas_server.h: Add arg to header.

2009-09-25  Matthew Mundell <matthew.mundell@intevation.de>

	Add credential setup to openvas server interface.
